loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:19: error: 'while' expected but '}' found.
}
^